Update CMakeLists.txt and .gitignore to match corn

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@
 # Clangd
 .cache/
 
-# Others
-.DS_Store
+# Dependencies
+deps/
+vcpkg_installed/
+
+# Build
 build/
 cmake-build-*/
 out/
-deps/
+dist/
+
+# Others
+.DS_Store
 docs/doxygen-output/
