--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -49,12 +49,12 @@ function (build_example EXAMPLE_NAME)
     add_custom_target(${EXAMPLE_NAME}_resources ALL
             COMMAND ${CMAKE_COMMAND} -E echo "Copying resources..."
             COMMAND ${CMAKE_COMMAND} -E make_directory
-                ${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}
+                "${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}"
             COMMAND ${CMAKE_COMMAND} -E remove_directory
-                ${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}/resources
+                "${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}/resources"
             COMMAND ${CMAKE_COMMAND} -E copy_directory
-                ${CMAKE_CURRENT_SOURCE_DIR}/${EXAMPLE_NAME}/resources
-                ${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}/resources
+                "${CMAKE_CURRENT_SOURCE_DIR}/${EXAMPLE_NAME}/resources"
+                "${EXAMPLES_OUTPUT_DIR}/${EXAMPLE_NAME}/resources"
             SOURCES ${RESOURCES}
     )
     add_dependencies(${EXAMPLE_NAME} ${EXAMPLE_NAME}_resources)
