--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,18 @@
-enable_testing()  # Enables testing functionalities
 find_package(GTest REQUIRED)
 
 file(GLOB_RECURSE TEST_HEADERS "${CMAKE_SOURCE_DIR}/test/*.h")
 file(GLOB_RECURSE TEST_SOURCES "${CMAKE_SOURCE_DIR}/test/*.cpp")
 
-add_executable(test ${TEST_HEADERS} ${TEST_SOURCES})
-set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${TEST_OUTPUT_DIR}")
-target_include_directories(test PRIVATE
-        ${GTEST_INCLUDE_DIRS}
+add_executable(cornui_test ${TEST_HEADERS} ${TEST_SOURCES})
+set_target_properties(cornui_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${TEST_OUTPUT_DIR}")
+target_include_directories(cornui_test PRIVATE
         "${CMAKE_SOURCE_DIR}/test/common"
         "${CMAKE_SOURCE_DIR}/include"
 )
-target_link_libraries(test ${GTEST_BOTH_LIBRARIES} cornui)
+target_link_libraries(cornui_test GTest::gtest GTest::gtest_main cornui)
 
 if (NOT ${CORNUI_OUTPUT_DIR} STREQUAL ${TEST_OUTPUT_DIR})
-    add_custom_target(test_cornui ALL
+    add_custom_target(cornui_test_dll ALL
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
                 "${CORNUI_OUTPUT_PATH}"
                 "${TEST_OUTPUT_DIR}"
@@ -24,5 +22,5 @@ if (NOT ${CORNUI_OUTPUT_DIR} STREQUAL ${TEST_OUTPUT_DIR})
                 "${TEST_OUTPUT_DIR}"
             COMMENT "Copied corn DLL to test output directory"
     )
-    add_dependencies(test test_cornui)
+    add_dependencies(cornui_test cornui_test_dll)
 endif ()
