--- a/cornui-config.cmake.in
+++ b/cornui-config.cmake.in
@@ -27,6 +27,7 @@ endif ()
 if(CornUI_FOUND AND NOT TARGET Corn::CornUI)
     add_library(Corn::CornUI SHARED IMPORTED)
     set_target_properties(Corn::CornUI PROPERTIES
+            IMPORTED_LOCATION "${CornUI_DYNAMIC_LIBRARY_RELEASE}"
             IMPORTED_LOCATION_DEBUG "${CornUI_DYNAMIC_LIBRARY_DEBUG}"
             IMPORTED_LOCATION_RELEASE "${CornUI_DYNAMIC_LIBRARY_RELEASE}"
             INTERFACE_INCLUDE_DIRECTORIES "${CornUI_INCLUDE_DIRS}"
@@ -34,6 +35,7 @@ if(CornUI_FOUND AND NOT TARGET Corn::CornUI)
 
     if(WIN32)
         set_target_properties(Corn::CornUI PROPERTIES
+                IMPORTED_IMPLIB "${CornUI_LIBRARIES_RELEASE}"
                 IMPORTED_IMPLIB_DEBUG "${CornUI_LIBRARIES_DEBUG}"
                 IMPORTED_IMPLIB_RELEASE "${CornUI_LIBRARIES_RELEASE}"
         )
