Bug fix: cmake without ninja

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,8 @@ file(GLOB_RECURSE SOURCES
 add_library(cornui SHARED ${HEADERS} ${SOURCES})
 set_target_properties(cornui PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY "${CORNUI_OUTPUT_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CORN_OUTPUT_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CORN_OUTPUT_DIR}"
         DEBUG_POSTFIX -d
 )
 set(CORNUI_OUTPUT_PATH $<TARGET_FILE:cornui>)
